Fixed Grid Spacing issue has been resolve

--- a/packages/evm/src/Application/Assets/components/SearchComponent/SearchComponent.scss
+++ b/packages/evm/src/Application/Assets/components/SearchComponent/SearchComponent.scss
@@ -41,7 +41,7 @@
 }
 
 .searchComponents {
-  padding: 0 65px;
+  padding: 0 4px 0px 65px;
   padding-top: 44px;
 }
 
