--- a/packages/evm/src/index.css
+++ b/packages/evm/src/index.css
@@ -28,7 +28,7 @@ code {
 }
 
 .makeStyles-contentShift-10 .mainContainer{
-  padding-left: 65px;
+  /* padding-left: 65px; */
 }
 
 .mainContainer{
